correct gap

--- a/src/App.css
+++ b/src/App.css
@@ -158,7 +158,7 @@ h1, h2, h3 h4 h5, h6, p {
   .container {
     max-width: calc(1110rem/16);
     padding: 109px 168px 100px 152px;
-    gap: calc(74rem/16);
+    gap: calc(70rem/16);
     
   }
 
